--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ padding: 20px;
 
 .dark-mode {
     background-color: #000;
-    color: #fff;
+    color: gray;
 }
 
 .theme-switch {display: inline-block;
